# Lift

./: .gitignore  Cargo.toml  README.md  com.github.XtremeTHN.Lift.json  com.github.XtremeTHN.Lift.yaml  flake.nix  meson.build  meson_options.txt  run  run.py  switch_info.txt
data/: com.github.XtremeTHN.Lift.desktop.in  com.github.XtremeTHN.Lift.gschema.xml  com.github.XtremeTHN.Lift.metainfo.xml.in  com.github.XtremeTHN.Lift.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  finder.rs  lift.gresource.xml  main.c  main.rs  meson.build  rom_data.rs  rom_info.rs  style.css  utils.rs
src/blueprints/: meson.build  not-found-page.blp  rom.blp  roms-page.blp  settings.blp  window.blp
src/old/: window.rs
src/remote/: reader.rs  server.rs
src/roms/: crypto.rs  keyring.rs  mod.rs  readers.rs  test.rs
src/roms/formats/: mod.rs  nacp.rs  nca.rs  xci.rs
src/roms/fs/: fs.rs  hfs.rs  mod.rs  pfs.rs  romfs.rs
src/ui/: circular_progress_paintable.rs  home_page.blp  home_page.rs  meson.build  mod.rs  not_found_page.rs  rom.blp  rom.rs  roms_page.blp  roms_page.rs  settings.rs  u.ui  window.blp  window.rs
src/ui/roms_page/: mod.rs  net.rs  page.rs  usb.rs
src/usb/: async_protocol.rs  daemon.rs  mod.rs  protocol.rs
src/usb/manager/: gudev.rs  mod.rs  portal.rs
