[package]
name = "lift"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.13.3", default-features = false, features = ["gtk4", "usb", "async-io"] }
async-channel = "2.5.0"
binrw = "0.15.1"
env_logger = "0.11.9"
futures-util = "0.3.32"
gtk4 = { version = "0.11.0", features = ["gnome_49"] }
hex = "0.4.3"
libadwaita = { version = "0.9.1", features = ["v1_6"] }
log = "0.4.29"
rusb = "0.9.4"
shellexpand = "3.1.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
aes = "0.8.4"
ctr = "0.9.2"
ecb = "0.1.2"
positioned-io = "0.3.5"
xts-mode = "0.5.1"