[package]
name = "lift"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.10"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
log = "0.4.29"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
