[package]
name = "lift"
version = "0.1.0"
edition = "2024"

[features]
default = ["gudev"]
portal = ["dep:ashpd"]
gudev = ["dep:gudev"]

[dependencies]
async-std = "1.13.2"
binrw = "0.15.1"
env_logger = "0.11.10"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.11.0", package = "gtk4", features = ["gnome_49"] }
log = "0.4.29"
rusb = "0.9.4"
thiserror = "2.0.18"
ashpd = { version = "0.13.3", optional = true, default-features = false, features = ["gtk4", "usb", "async-io"] }
gudev = { version = "0.18.0", optional = true }
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_6"] }
